--- a/index.html
+++ b/index.html
@@ -1,115 +1,223 @@
-<!-- Badge Code - Do Not Change The Code -->
-<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="e27e1e5ffe3ea5613fa72c4c72d89ec8|5|external|1|#0099cc|#f5f5f5|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
-<!-- Badge Code End Here -->
-
-
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Terminal</title>
-	<style type="text/css">
-		body {
-			background-color: black;
-			color: rgb(131, 11, 187);
-			font-family: 'Courier New', Courier, monospace;
-			font-size: 1.2em;
-			padding: 20px;
-			margin: 0;
-			height: 100vh;
-			display: flex;
-			flex-direction: column;
-			align-items: stretch;
-			justify-content: flex-end;
-		}
+  <head>
+    <title>Simulated Linux Terminal</title>
+    <style>
+      #terminal {
+        height: 405px;
+        width: 840px;
+        border: 1px solid #ccc;
+        font-family: monospace;
+        font-size: 16px;
+        background-color: black;
+        color: white;
+        position: absolute;
+        top: 100px;
+        left: 100px;
+        overflow-y: scroll;
+      }
 
-		#terminal {
-			height: 600px;
-			width: 800px;
-			overflow-y: scroll;
-			border: 1px solid rgb(245, 241, 247);
-			padding: 10px;
-			margin-bottom: 10px;
-			position: relative;
-		}
+      #top-bar {
+        height: 32px;
+        background-color: #ccc;
+        color: #333;
+        padding: 5px;
+        cursor: move;
+        position: absolute;
+        top: 58px;
+        left: 100px;
+        width: 832px;
+        z-index: 1;
+      }
 
-		#terminal::before {
-			content: "";
-			position: absolute;
-			top: 0;
-			right: 0;
-			width: 47px;
-			height: 47px;
-			background-image: url('https://user-images.githubusercontent.com/28081004/216797705-9294a8ce-5dad-4d90-90b9-61aad14347fb.gif');
-			background-size: contain;
-			background-repeat: no-repeat;
-		}
+      #close-btn {
+        float: right;
+        font-weight: bold;
+        cursor: pointer;
+      }
 
-		#prompt {
-			display: flex;
-			align-items: center;
-			color: rgb(131, 11, 187);
-			margin-bottom: 10px;
-		}
+      #input-line {
+        display: flex;
+        align-items: center;
+        height: 30px;
+        padding: 5px;
+        background-color: #000;
+      }
 
-		#input {
-			background-color: transparent;
-			border: none;
-			color: rgb(131, 11, 187);
-			font-family: 'Courier New', Courier, monospace;
-			font-size: 1.2em;
-			flex-grow: 1;
-			margin-left: 10px;
-			outline: none;
-		}
-	</style>
-</head>
-<body>
-	<div id="terminal"></div>
-	<div id="prompt">
-		&gt;&gt;&gt;
-		<input id="input" type="text" autofocus>
-	</div>
+      #input-prefix {
+        color: #0f0;
+      }
 
-	<script type="text/javascript">
-		// get references to HTML elements
-		var terminal = document.getElementById("terminal");
-		var input = document.getElementById("input");
+      #input-field {
+        background-color: transparent;
+        border: none;
+        color: white;
+        font-family: monospace;
+        font-size: 16px;
+        width: 100%;
+        margin-left: 5px;
+        outline: none;
+      }
 
-		// print a welcome message
-		terminal.innerHTML += "Welcome to Null-Pounce. Type 'help' for a list of commands.<br><br>";
+      /* add a margin top to the terminal output to make room for the top bar */
+      #terminal-output {
+        margin-top: 40px;
+      }
+    </style>
+  </head>
+  <body>
+    <div id="top-bar">
+      Simulated Linux Terminal
+      <span id="close-btn">X</span>
+    </div>
 
-		// add an event listener to the input field
-		input.addEventListener("keydown", function(event) {
-			if (event.key === "Enter") {
-				// get the input value
-				var command = input.value;
+    <div id="terminal">
+      <div id="terminal-output">
+        <div>Welcome to the simulated Linux terminal. Type "help" for available commands.</div>
+      </div>
+      <div id="input-line">
+        <span id="input-prefix"></span>
+        <input type="text" id="input-field">
+      </div>
+    </div>
 
-				// print the command to the terminal
-				terminal.innerHTML += "&gt;&gt;&gt; " + command + "<br>";
+    <script>
+      const topBar = document.getElementById("top-bar");
+      const terminal = document.getElementById("terminal");
+      const inputField = document.getElementById("input-field");
+      const terminalOutput = document.getElementById("terminal-output");
+      const inputPrefix = document.getElementById("input-prefix");
+      const banner = document.createElement("div");
+banner.style.position = "fixed";
+banner.style.top = "0";
+banner.style.left = "0";
+banner.style.width = "100%";
+banner.style.background = "#f0ad4e";
+banner.style.color = "#fff";
+banner.style.padding = "10px";
+banner.style.fontSize = "16px";
+banner.style.textAlign = "center";
+banner.innerHTML = "Welcome! Your IP address is loading...";
 
-				// handle the command
-				if (command === "hello") {
-					terminal.innerHTML += "Hello, world!<br>";
-				} else if (command === "date") {
-					var date = new Date();
-					terminal.innerHTML += date.toString() + "<br>";
-				} else if (command === "about") {
-					terminal.innerHTML += "Insert about info here.<br>";
-				} else if (command === "help") {
-					terminal.innerHTML += "Available commands:<br>";
-					terminal.innerHTML += "  hello - print a greeting<br>";
-					terminal.innerHTML += "  date - print the current date and time<br>";
-					terminal.innerHTML += "  about - print information about this program<br>";
-					terminal.innerHTML += "  help - print this help message<br>";
-				} else {
-					terminal.innerHTML += "Command not found: " + command + "<br>";
-				}
+document.body.appendChild(banner);
 
-				// clear the input field
-				input.value = "";
-			}
-		});
-	</script>
+fetch("https://api.ipify.org?format=json")
+  .then((response) => response.json())
+  .then((data) => {
+    banner.innerHTML = `Welcome! Your IP address is ${data.ip}`;
+    setTimeout(() => {
+      banner.style.display = "none";
+    }, 10000);
+  })
+  .catch((error) => {
+    console.error("Error fetching IP address:", error);
+  });
+
+      let isDragging = false;
+      let dragOffset = { x: 0, y: 0 };
+
+      topBar.addEventListener("mousedown", function(event) {
+        isDragging = true;
+        dragOffset.x = event.offsetX;
+        dragOffset.y = event.offsetY;
+      });
+
+      document.addEventListener("mousemove", function(event) {
+        if (isDragging) {
+          const x = event.pageX - dragOffset.x;
+          const y = event.pageY - dragOffset.y;
+          terminal.style.top = y + "px";
+          terminal.style.left = x + "px";
+          topBar.style.top = y + "px";
+          topBar.style.left = x + "px";
+        }
+      });
+
+      document.addEventListener("mouseup", function(event) {
+  isDragging = false;
+});
+
+function showHelp() {
+  const helpMessage = "These are the available commands: <br> help - shows this help message <br> date - displays the current date and time";
+
+  const outputLine = document.createElement("div");
+  outputLine.innerHTML = helpMessage;
+  terminalOutput.appendChild(outputLine);
+  terminal.scrollTop = terminal.scrollHeight;
+}
+
+function showDate() {
+  const date = new Date();
+  const dateString = date.toLocaleString();
+
+  const outputLine = document.createElement("div");
+  outputLine.textContent = dateString;
+  terminalOutput.appendChild(outputLine);
+  terminal.scrollTop = terminal.scrollHeight;
+}
+
+function executeCommand(input) {
+  switch (input) {
+    case "help":
+      showHelp();
+      break;
+    case "date":
+      showDate();
+      break;
+    default:
+      const outputLine = document.createElement("div");
+      outputLine.textContent = `${input}: command not found`;
+      terminalOutput.appendChild(outputLine);
+      terminal.scrollTop = terminal.scrollHeight;
+      break;
+  }
+}
+
+inputField.addEventListener("keydown", function(event) {
+  if (event.key === "Enter") {
+    const input = inputField.value;
+    const outputLine = document.createElement("div");
+    outputLine.innerHTML = `<span style="color: #0f0;">guest@NullPounce:~$</span> ${input}`;
+    terminalOutput.appendChild(outputLine);
+    executeCommand(input);
+    inputField.value = "";
+    terminal.scrollTop = terminal.scrollHeight;
+  }
+});
+
+inputPrefix.innerHTML = `<span style="color: #0f0;">guest@NullPounce:~$</span>`;
+</script>
 </body>
 </html>
-``
+
+<img id="animated-mascot" src="https://s3.gifyu.com/images/Oanl.gif" style="position: fixed; bottom: 0; right: 0; cursor: move; z-index: 9999;">
+<script>
+  const mascot = document.getElementById("animated-mascot");
+  mascot.addEventListener("mousedown", startDragging);
+
+  function startDragging(event) {
+    let shiftX = event.clientX - mascot.getBoundingClientRect().left;
+    let shiftY = event.clientY - mascot.getBoundingClientRect().top;
+
+    moveAt(event.pageX, event.pageY);
+
+    function moveAt(pageX, pageY) {
+      mascot.style.left = pageX - shiftX + "px";
+      mascot.style.top = pageY - shiftY + "px";
+    }
+
+    function onMouseMove(event) {
+      moveAt(event.pageX, event.pageY);
+    }
+
+    function stopDragging() {
+      document.removeEventListener("mousemove", onMouseMove);
+      mascot.removeEventListener("mouseup", stopDragging);
+    }
+
+    document.addEventListener("mousemove", onMouseMove);
+    mascot.addEventListener("mouseup", stopDragging);
+
+    event.preventDefault();
+  }
+</script>
