--- a/index.html
+++ b/index.html
@@ -327,8 +327,8 @@
             <br> genymotion, mobile security framework, helped hunt down Pegasus spyware
             <br>
             <b>links:</b>
-            <a href="https://www.google.com/" rel="me noreferrer" target="_blank">link 1</a>
-            <a href="https://www.google.com/" rel="me noreferrer" target="_blank">link 2</a>
+            <a href="https://github.com/NullPounce/NullPounce.github.io/raw/main/cv.pdf" rel="me noreferrer" target="_blank">CV</a>
+            <a href="https://ko-fi.com/pounce" rel="me noreferrer" target="_blank">Kofi</a>
             
             <br>
             <b>contact:</b>
