--- a/index.html
+++ b/index.html
@@ -501,3 +501,9 @@ inputPrefix.innerHTML = `<span style="color: #0f0;">guest@NullPounce:~$</span>`;
             
         </div>
     </section></body></html>
+
+
+
+<!-- Badge Code - Do Not Change The Code -->
+<a class="hitCounter" href="https://visitorshitcounter.com/" target="_blank" title="Hit counter" data-name="e27e1e5ffe3ea5613fa72c4c72d89ec8|5|external|1|#0099cc|#f5f5f5|small|s-hit">Hit Counter</a><script>document.write("<script type='text/javascript' src='https://visitorshitcounter.com/js/hitCounter.js?v="+Date.now()+"'><\/script>");</script>
+<!-- Badge Code End Here -->
